// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test svg-editor should render correctly in mac 1`] = `
<div>
  <div>
    <div
      class="mac"
      id="svg_editor"
    >
      <div>
        <div
          class="rulers mac"
          id="rulers"
        >
          <div
            class="corner"
          />
          <div
            class="x"
            id="ruler_x"
          >
            <div>
              <canvas
                height="15"
              />
            </div>
          </div>
          <div
            class="y"
            id="ruler_y"
          >
            <div>
              <canvas
                width="15"
              />
            </div>
          </div>
          <div
            class="unit"
          >
            inch
          </div>
        </div>
        <div>
          This is dummy Workarea
        </div>
        <div
          id="tool_import"
          style="display: none;"
        />
        <input
          id="text"
          size="35"
          type="text"
        />
        <div
          id="cur_context_panel"
        />
        <div
          class="dropdown"
          id="option_lists"
        />
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          class="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size="6"
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size="6"
                type="text"
              />
            </label>
            <label>
              <select
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  selected=""
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                checked=""
                name="image_opt"
                type="radio"
                value="embed"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                name="image_opt"
                type="radio"
                value="ref"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          class="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                selected=""
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                id="grid_snapping_on"
                type="checkbox"
                value="snapping_on"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                id="grid_snapping_step"
                size="3"
                type="text"
                value="10"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                id="grid_color"
                size="3"
                type="text"
                value="#000"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                checked=""
                id="show_rulers"
                type="checkbox"
                value="show_rulers"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        class="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
  </div>
  <div>
    MockZoomBlock
  </div>
</div>
`;

exports[`test svg-editor should render correctly in win 1`] = `
<div>
  <div>
    <div
      class=""
      id="svg_editor"
    >
      <div>
        <div
          class="rulers"
          id="rulers"
        >
          <div
            class="corner"
          />
          <div
            class="x"
            id="ruler_x"
          >
            <div>
              <canvas
                height="15"
              />
            </div>
          </div>
          <div
            class="y"
            id="ruler_y"
          >
            <div>
              <canvas
                width="15"
              />
            </div>
          </div>
          <div
            class="unit"
          >
            mm
          </div>
        </div>
        <div>
          This is dummy Workarea
        </div>
        <div
          id="tool_import"
          style="display: none;"
        />
        <input
          id="text"
          size="35"
          type="text"
        />
        <div
          id="cur_context_panel"
        />
        <div
          class="dropdown"
          id="option_lists"
        />
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          class="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size="6"
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size="6"
                type="text"
              />
            </label>
            <label>
              <select
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  selected=""
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                checked=""
                name="image_opt"
                type="radio"
                value="embed"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                name="image_opt"
                type="radio"
                value="ref"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          class="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                selected=""
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                id="grid_snapping_on"
                type="checkbox"
                value="snapping_on"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                id="grid_snapping_step"
                size="3"
                type="text"
                value="10"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                id="grid_color"
                size="3"
                type="text"
                value="#000"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                checked=""
                id="show_rulers"
                type="checkbox"
                value="show_rulers"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        class="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
  </div>
  <div>
    MockZoomBlock
  </div>
</div>
`;
